# minuit-cpp

./: .gitignore  CMakeLists.txt  README.md  Readme.md
doc/: MakeTargets.md  doxy.cfg.in
include/minuit-cpp/: ABObj.hh  ABProd.hh  ABSum.hh  ABTypes.hh  AnalyticalGradientCalculator.hh  BasicFunctionGradient.hh  BasicFunctionMinimum.hh  BasicMinimumError.hh  BasicMinimumParameters.hh  BasicMinimumSeed.hh  BasicMinimumState.hh  CombinedMinimizer.hh  CombinedMinimumBuilder.hh  ContoursError.hh  DavidonErrorUpdator.hh  FCNAdapter.hh  FCNBase.hh  FCNGradAdapter.hh  FCNGradientBase.hh  FumiliBuilder.hh  FumiliChi2FCN.hh  FumiliErrorUpdator.hh  FumiliFCNAdapter.hh  FumiliFCNBase.hh  FumiliGradientCalculator.hh  FumiliMaximumLikelihoodFCN.hh  FumiliMinimizer.hh  FumiliStandardChi2FCN.hh  FumiliStandardMaximumLikelihoodFCN.hh  FunctionGradient.hh  FunctionMinimizer.hh  FunctionMinimum.hh  GenericFunction.hh  GradientCalculator.hh  HessianGradientCalculator.hh  InitialGradientCalculator.hh  LASymMatrix.hh  LAVector.hh  LaInverse.hh  LaOuterProduct.hh  (+69 more)
src/: Config.hh.in  minuit-cpp.pc.cmake
src/lib/: AnalyticalGradientCalculator.cxx  BasicMinimumError.cxx  CombinedMinimumBuilder.cxx  DavidonErrorUpdator.cxx  FumiliBuilder.cxx  FumiliErrorUpdator.cxx  FumiliGradientCalculator.cxx  FumiliMinimizer.cxx  FumiliStandardChi2FCN.cxx  FumiliStandardMaximumLikelihoodFCN.cxx  HessianGradientCalculator.cxx  InitialGradientCalculator.cxx  LaEigenValues.cxx  LaInnerProduct.cxx  LaInverse.cxx  LaOuterProduct.cxx  LaSumOfElements.cxx  LaVtMVSimilarity.cxx  MPIProcess.cxx  MnApplication.cxx  MnContours.cxx  MnCovarianceSqueeze.cxx  MnEigen.cxx  MnFcn.cxx  MnFumiliMinimize.cxx  MnFunctionCross.cxx  MnGlobalCorrelationCoeff.cxx  MnHesse.cxx  MnLineSearch.cxx  MnMachinePrecision.cxx  MnMinos.cxx  MnParabolaFactory.cxx  MnParameterScan.cxx  MnPlot.cxx  MnPosDef.cxx  MnPrint.cxx  MnScan.cxx  MnSeedGenerator.cxx  MnStrategy.cxx  MnTiny.cxx  (+30 more)
src/utils/: minuit-cpp-config.cxx
